web/app.css
/* ... */
.cm-formatting.cm-formatting-code.cm-inline-code {
    background: none !important;
}

.cm-s-hypermd-light img.hmd-image {
    /*PATCHED*/
    max-width: 400px;
    display: inline-block;

    margin-left: 25%;
}

@media (max-width: 768px) {
    .cm-s-hypermd-light img.hmd-image {
        margin-left: 20%;
    }
}

@media (max-width: 670px) {
    .cm-s-hypermd-light img.hmd-image {
        max-width: 300px;
        margin-left: 17%;
    }

    #sidebar {
        display: none;
    }
}

.cm-s-hypermd-light span.cm-formatting-task {
    color: var(--col-tx) !important;
}

.cm-s-hypermd-light span.cm-formatting-task:not(.hmd-hidden-token) {
    background-image: none;
}

.cm-s-hypermd-light span.cm-attribute, .cm-s-hypermd-light span.cm-def, .cm-s-hypermd-light span.cm-string {
    color: var(--col-link) !important;
}

.cmd-pressed .cm-inline-code:hover {
    cursor: pointer;
}

#move, #search {
    z-index: 10000;
}

#close-sidebar {
    position: absolute;
    top: 2px;
    right: 8px;
    opacity: 0;
    cursor: pointer;
    font-size: 27px;
    color: var(--col-link);
    transition: opacity 0.2s;
}

#close-editor2 {
    position: relative;
    cursor: pointer;
    font-size: 27px;
    color: var(--col-link);
    background: none;
    border: none;
    top: -2px;
}

#go-backward, #go-backward {
    stroke: var(--col-link);
}

#sidebar:hover #close-sidebar {
    opacity: 1;
}

#open-sidebar {
    position: fixed;
    left: 0;
    top: 0;
    width: 18px;
    height: 100vh;
    opacity: 0;
    cursor: pointer;
    background: color-mix(in srgb, var(--col-bg-active) 50%, transparent);
    transition: opacity 0.2s;
    z-index: 1000;
}

#open-sidebar:hover {
    opacity: 1;
}

#sidebar:not([style*="display: none"]) ~ #open-sidebar {
    display: none;
}

.cm-s-hypermd-light .cm-header {
    font-weight: 550 !important;
}

.cm-s-hypermd-light span.cm-inline-code:not(.cm-formatting):not(.cm-hmd-indented-code) {
    background: rgba(135, 131, 120, .15) !important;
    border-radius: 4px;
    vertical-align: baseline;
    padding: 2px 3px !important;
    font-size: 100% !important;
}

.cm-s-hypermd-light div.HyperMD-codeblock-bg {
    border-left: 1px solid var(--col-border);
    border-right: 1px solid var(--col-border);
}

.cm-s-hypermd-light div.HyperMD-codeblock-begin-bg {
    /*border-top: 1px solid var(--col-border);*/
    border-top: none;
}

.cm-s-hypermd-light div.HyperMD-codeblock-end-bg {
    /*border-bottom: 1px solid var(--col-border);*/
    border-bottom: none;
}

.cm-s-hypermd-light div.HyperMD-codeblock-bg {
    border-left: none;
    border-right: none;
}

.cm-s-hypermd-light div.HyperMD-codeblock-begin-bg {
    border-top-left-radius: 10px !important;
    border-top-right-radius: 10px !important;
}
.cm-s-hypermd-light div.HyperMD-codeblock-end-bg {
    border-bottom-left-radius: 10px !important;
    border-bottom-right-radius: 10px !important;
}

.nav-button {
    position: relative;
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
}


.nav-button:disabled {
    cursor: not-allowed;
}

#nav-buttons {
    background: var(--col-bg-alt);
    border-radius: 10px;
    display: flex;
    position: absolute;
    padding: 0;
    top: 2px;
    right: 2px;
}

.sidebar-blink {
    animation: sidebar-highlight 4s ease-out;
}

@keyframes sidebar-highlight {
    0% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 1; }
    20% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 0.7; }
    25% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 0.5; }
    30% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 0.7; }
    45% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 1; }
    50% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 0.5; }
    55% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 0.7; }
    75% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 1; }
    100% { color: var(--col-link); background-color: var(--col-bg-active); opacity: 1; }
}

/*.tj_container li ul li ul li .tj_description {*/
/*    padding-left: 120px !important;*/
/*}*/

.tj_container ul ul li span.tj_description:not(.tj_leaf) {
    padding-left: 2em;
}

.tj_container ul ul ul li span.tj_description {
    padding-left: 4em !important;
}

.hmd-inactive-line .cm-hmd-indent-in-quote {
    position: absolute;
    width: 0;
    /*overflow: hidden;*/
}

.cm-s-hypermd-light pre.HyperMD-quote-1 {
    text-indent: -10px !important;
    padding-inline-start: 24px !important;
}

